force-app/main/default/objects/Purchase_contract__c/Purchase_contract__c.object-meta.xml
<CustomObject>
    <label>Purchase Contract</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Contract ID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>