force-app/main/default/objects/Purchase_contract__c/fields/Contract_Currency__c.field-meta.xml
<CustomField>
    <fullName>Contract_Currency__c</fullName>
    <label>Contract Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Currency</valueSetName>
    </valueSet>
</CustomField>