force-app/main/default/objects/Purchase_contract__c/fields/Contract_Value__c.field-meta.xml
<CustomField>
    <fullName>Contract_Value__c</fullName>
    <label>Contract Value</label>
    <summarizedField>Purchase_Contract_Product__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Purchase_Contract_Product__c.Purchase_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>