force-app/main/default/objects/Purchase_contract__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Đã tạo</fullName>
            </value>
            <value>
                <fullName>Đang đợi duyệt</fullName>
            </value>
            <value>
                <fullName>Đã phê duyệt</fullName>
            </value>
            <value>
                <fullName>Đang thực hiện</fullName>
            </value>
            <value>
                <fullName>Hoàn thành</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>