force-app/main/default/objects/Purchase_contract__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Contract</relationshipLabel>
    <relationshipName>Purchase_Contract</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>