force-app/main/default/objects/Purchase_contract__c/fields/Total_deposit__c.field-meta.xml
<CustomField>
    <fullName>Total_deposit__c</fullName>
    <label>Total Deposit</label>
    <summarizedField>Contractdeposit__c.Amount__c</summarizedField>
    <summaryForeignKey>Contractdeposit__c.Purchase_Contract__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>