force-app/main/default/objects/Purchase_contract__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Supplier__c</columns>
    <columns>Status__c</columns>
    <columns>Contract_Signed_Date__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>Contract_End_Date__c</columns>
    <columns>Contract_Value__c</columns>
    <columns>Contract_Currency__c</columns>
    <columns>Payment_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>